main base building

--- a/src/components/Main.astro
+++ b/src/components/Main.astro
@@ -1,4 +1,33 @@
 ---
 
 ---
-<h1>Welcome</h1>
+
+<style>
+  body {
+    background-image: url("../assets/home/background-home-mobile.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
+    
+  }
+
+  .space__heading{}
+  .space__title{}
+  .space__text{}
+</style>
+
+<main class="space">
+  <div class="space__content">
+    <h5 class="space__heading">So, you want to travel to</h5>
+    <h1 class="space__title">Space</h1>
+    <p class="space__text">
+      Space Let’s face it; if you want to go to space, you might as well
+      genuinely go to outer space and not hover kind of on the edge of it. Well
+      sit back, and relax because we’ll give you a truly out of this world
+      experience!
+    </p>
+  </div>
+
+  <div class="space__explore">
+    <a href="/" class="space__link">Explore</a>
+  </div>
+</main>
