--- a/src/layout/Base.astro
+++ b/src/layout/Base.astro
@@ -1,6 +1,8 @@
 ---
 import '../styles/global.css';
 import '../styles/base.css';
+
+import Header from '../components/Header.astro'
 ---
 
 <html lang="en">
@@ -15,6 +17,7 @@ import '../styles/base.css';
         <link href="https://fonts.googleapis.com/css2?family=Barlow+Condensed:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Bellefair&display=swap" rel="stylesheet">
 	</head>
 	<body>
+        <Header/>
 		<slot/>
 	</body>
 </html>
