--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -1,75 +1,83 @@
-:root{
-    /* Colors */
-    --dark-blue: hsl(230 35 7);
-    --light-blue: hsl(231 77 90);
-    --white: hsl(0 0 100);
+:root {
+  /* Colors */
+  --dark-blue: hsl(230 35 7);
+  --light-blue: hsl(231 77 90);
+  --white: hsl(0 0 100);
 
-    /* Typography */
-    --bellafair-font: "Bellefair", serif;
-    --barlow-font: "Barlow Condensed", sans-serif;
+  /* Typography */
+  --bellafair-font: "Bellefair", serif;
+  --barlow-font: "Barlow Condensed", sans-serif;
 
-    /* Spacing */
-    --space-h5: .475rem;
-    --subheading-2: .235rem;
-    --nav-text: .27rem;
+  /* Spacing */
+  --space-h5: 0.475rem;
+  --subheading-2: 0.235rem;
+  --nav-text: 0.27rem;
 }
 
 html {
-    box-sizing: border-box;
-    font-size: 62.5%;
-  }
-  
-  *,
-  *::before,
-  *::after {
-    box-sizing: inherit;
-    margin: 0;
-  }
-  
-  body {
-    font-size: 1.6rem;
-    font-family: var(--bellafair-font);
-  }
-  
-  img {
-    display: block;
-    max-width: 100%;
-  }
+  box-sizing: border-box;
+  font-size: 62.5%;
+}
 
-  h1{
-    font-size: 15rem;
-  }
+*,
+*::before,
+*::after {
+  box-sizing: inherit;
+  margin: 0;
+}
 
-  h2{
-    font-size: 10rem;
-  }
+body {
+  font-size: 1.6rem;
+  font-family: var(--bellafair-font);
+}
 
-  h3{
-    font-size: 5.6rem;
-  }
+img {
+  display: block;
+  max-width: 100%;
+}
 
-  h4{
-    font-size: 3.2rem;
-  }
+h1 {
+  font-size: 15rem;
+  text-transform: uppercase;
+}
 
-  h5{
-    font-size: 2.8rem;
-    font-family: var(--barlow-font);
-    letter-spacing: var(--space-h5);
-  }
+h2 {
+  font-size: 10rem;
+  text-transform: uppercase;
+}
 
-  .subheading-1{
-    font-size: 2.8rem;
-  }
+h3 {
+  font-size: 5.6rem;
+  text-transform: uppercase;
+}
 
-  .subheading-2{
-    font-family: var(--barlow-font);
-    font-size: 1.4rem;
-    letter-spacing: var(--subheading-2);
-  }
+h4 {
+  font-size: 3.2rem;
+  text-transform: uppercase;
+}
 
-  .nav-text{
-    font-family: var(--barlow-font);
-    font-size: 1.6rem;
-    letter-spacing: var(--nav-text);
-  }
+h5 {
+  font-size: 2.8rem;
+  font-family: var(--barlow-font);
+  letter-spacing: var(--space-h5);
+  text-transform: uppercase;
+}
+
+.subheading-1 {
+  font-size: 2.8rem;
+  text-transform: uppercase;
+}
+
+.subheading-2 {
+  font-family: var(--barlow-font);
+  font-size: 1.4rem;
+  letter-spacing: var(--subheading-2);
+  text-transform: uppercase;
+}
+
+.nav-text {
+  font-family: var(--barlow-font);
+  font-size: 1.6rem;
+  letter-spacing: var(--nav-text);
+  text-transform: uppercase;
+}
