--- a/src/components/Main.astro
+++ b/src/components/Main.astro
@@ -4,15 +4,10 @@
 
 <style>
   body {
-    background-image: url("../assets/home/background-home-mobile.jpg");
+    background-image: url('../assets/home/background-home-mobile.jpg');
     background-repeat: no-repeat;
     background-size: cover;
-    
   }
-
-  .space__heading{}
-  .space__title{}
-  .space__text{}
 </style>
 
 <main class="space">
