--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -5,8 +5,8 @@
   --white: hsl(0 0 100);
 
   /* Typography */
-  --bellafair-font: "Bellefair", serif;
-  --barlow-font: "Barlow Condensed", sans-serif;
+  --bellafair-font: 'Bellefair', serif;
+  --barlow-font: 'Barlow Condensed', sans-serif;
 
   /* Spacing */
   --space-h5: 0.475rem;
@@ -27,7 +27,6 @@ html {
 }
 
 body {
-  font-size: 1.6rem;
   font-family: var(--bellafair-font);
 }
 
@@ -36,48 +35,68 @@ img {
   max-width: 100%;
 }
 
-h1 {
-  font-size: 15rem;
+h1,
+h2,
+h3,
+h4,
+h5 {
   text-transform: uppercase;
+  font-weight: 400;
+  color: var(--white);
+}
+
+h1 {
+  font-size: 8rem;
 }
 
 h2 {
-  font-size: 10rem;
-  text-transform: uppercase;
+  font-size: 5.6rem;
 }
 
 h3 {
-  font-size: 5.6rem;
-  text-transform: uppercase;
+  font-size: 2.4rem;
 }
 
 h4 {
-  font-size: 3.2rem;
-  text-transform: uppercase;
+  font-size: 1.6rem;
 }
 
 h5 {
-  font-size: 2.8rem;
+  font-size: 1.6rem;
   font-family: var(--barlow-font);
   letter-spacing: var(--space-h5);
+  color: var(--light-blue);
+}
+
+/* No need media queries */
+
+p {
+  font-family: var(--barlow-font);
+  font-size: 1.8rem;
+  color: var(--light-blue);
+}
+
+.subheading-1,
+.subheading-2,
+.nav-text {
   text-transform: uppercase;
 }
 
 .subheading-1 {
   font-size: 2.8rem;
-  text-transform: uppercase;
+}
+
+.subheading-2,
+.nav-text {
+  font-family: var(--barlow-font);
 }
 
 .subheading-2 {
-  font-family: var(--barlow-font);
   font-size: 1.4rem;
   letter-spacing: var(--subheading-2);
-  text-transform: uppercase;
 }
 
 .nav-text {
-  font-family: var(--barlow-font);
   font-size: 1.6rem;
   letter-spacing: var(--nav-text);
-  text-transform: uppercase;
 }
