main content mobile

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,4 +1,12 @@
 ---
 
 ---
+
+<style>
+  header {
+    height: 8.8rem;
+    border: solid 0.1rem var(--white);
+  }
+</style>
+
 <header>header</header>
