--- a/src/components/Main.astro
+++ b/src/components/Main.astro
@@ -8,6 +8,52 @@
     background-repeat: no-repeat;
     background-size: cover;
   }
+
+  .space {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .space__content {
+    padding: 2.5rem 2.4rem;
+  }
+
+  .space__title,
+  .space__heading,
+  .space__text {
+    text-align: center;
+  }
+
+  .space__title {
+    line-height: 10rem;
+    margin: 0;
+    padding: 1.5rem 0;
+  }
+
+  .space__text {
+    line-height: 2.5rem;
+  }
+
+  .space__explore {
+    padding: 5.5rem 0;
+  }
+
+  .space__link {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+
+    text-transform: uppercase;
+    letter-spacing: 0.125rem;
+    font-size: 2rem;
+    width: 15rem;
+    height: 15rem;
+    border-radius: 50%;
+    color: var(--dark-blue);
+    background-color: var(--white);
+  }
 </style>
 
 <main class="space">
