--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,46 +1,59 @@
 ---
-import Navbar from "./Navbar.astro";
-import logo from "../assets/shared/logo.svg";
-import hamburgerMenu from "../assets/shared/icon-hamburger.svg";
+import { Image } from 'astro:assets';
+import Navbar from './Navbar.astro';
+import logo from '../assets/shared/logo.svg';
+import hamburgerMenu from '../assets/shared/icon-hamburger.svg';
 ---
 
 <style>
-  header {
-    height: 8.8rem;
-    border: solid 0.1rem var(--white);
+  .header__home,
+  .header__menu {
+    padding: 1.4rem;
   }
 
-  .header{
+  .header {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
     align-items: center;
   }
 
-  .header__btn{
+  .header__link {
+    padding: 1rem;
+  }
+
+  .header__logo {
+    width: 4rem;
+    height: 4rem;
+  }
+
+  .header__btn {
+    padding: 1rem;
     border: none;
     background-color: unset;
   }
 
-  .header__hamburger{
+  .header__hamburger {
+    width: 2.4rem;
+    height: 2.1rem;
     object-fit: cover;
   }
 </style>
 
 <script>
   const btnMenu = document.querySelector('.header__btn');
-  const menu = document.querySelector('.navbar__links')
-  
-  btnMenu.addEventListener('click', function(e){
-    menu.classList.add('navbar__links--active')
-  })
+  const menu = document.querySelector('.navbar__links');
+
+  btnMenu.addEventListener('click', function (e) {
+    menu.classList.add('navbar__links--active');
+  });
 </script>
 
 <header class="header">
   <div class="header__home">
-    <a href="/" class="header__link">
-      <!-- <Image src={logo} alt="Logo Space Tourism" class="header__logo"/> -->
-      <img src={logo.src} alt="Logo Space Tourism" />
+    <a href="/" class="header__link" aria-label="Go main page">
+      <Image src={logo} alt="Logo Space Tourism" class="header__logo" />
+      <!-- <img src={logo.src} alt="Logo Space Tourism" /> -->
     </a>
   </div>
 
@@ -55,5 +68,5 @@ import hamburgerMenu from "../assets/shared/icon-hamburger.svg";
     </button>
   </div>
 
-  <Navbar  />
+  <Navbar />
 </header>
