Destination base building

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -52,8 +52,8 @@ import hamburgerMenu from '../assets/shared/icon-hamburger.svg';
 <header class="header">
   <div class="header__home">
     <a href="/" class="header__link" aria-label="Go main page">
-      <Image src={logo} alt="Logo Space Tourism" class="header__logo" />
-      <!-- <img src={logo.src} alt="Logo Space Tourism" /> -->
+      <!-- <Image src={logo} alt="Logo Space Tourism" class="header__logo" /> -->
+      <img src={logo.src} alt="Logo Space Tourism" />
     </a>
   </div>
 
