Dinamic image destination

--- a/src/layout/BaseDestination.astro
+++ b/src/layout/BaseDestination.astro
@@ -1,7 +1,6 @@
 ---
-import Base from "./Base.astro";
-import Destination from "../components/Destination.astro";
-import Header from "../components/Header.astro";
+import Base from './Base.astro';
+import Destination from '../components/Destination.astro';
 
 const { destinationName } = Astro.props;
 ---
