--- a/src/components/Destination.astro
+++ b/src/components/Destination.astro
@@ -1,6 +1,9 @@
 ---
-import HeaderDestination from "./HeaderDestination.astro";
-import { destinations } from "../data.json";
+import type { ImageMetadata } from 'astro';
+import { Picture } from 'astro:assets';
+import HeaderDestination from './HeaderDestination.astro';
+import { destinations } from '../data.json';
+// import moon from '../assets/destination/image-moon.png';
 
 const { destinationName } = Astro.props;
 const [destination] = destinations.filter(
@@ -8,19 +11,55 @@ const [destination] = destinations.filter(
 );
 console.log(destination);
 
-import img from "../assets/destination/image-moon.png";
+const images = import.meta.glob<{ default: ImageMetadata }>(
+  '../assets/destination/*.{png,webp}'
+);
+console.log(images);
 ---
 
+<style>
+  .destination__heading {
+    display: flex;
+    justify-content: center;
+    gap: 1.5rem;
+    color: var(--white);
+  }
+
+  .destination-span {
+    opacity: 0.25;
+  }
+
+  .destination__image-container {
+    padding: 3rem 0 2.5rem;
+  }
+
+  .destination__image {
+    margin: 0 auto;
+    width: 17rem;
+    height: 17rem;
+    object-fit: cover;
+  }
+
+  .destination__data {
+    padding: 0 2.4rem;
+  }
+</style>
+
 <section class="destination">
-  <!-- TODO: what number heading is -->
-  <h3 class="destination__heading">
+  <h5 class="destination__heading">
     <span class="destination-span">01</span>Pick your destination
-  </h3>
+  </h5>
 
   <!-- TODO: images .png .webp in .destination__image -->
   <div class="destination__info">
     <div class="destination__image-container">
-      <img class="destination__image" src={img.src} alt={destination.name} />
+      <!-- <img src={moon.src} alt={destination.name} /> -->
+      <Picture
+        src={images[destination.images.png]()}
+        formats={['webp', 'png']}
+        alt={destination.name}
+        class="destination__image"
+      />
     </div>
 
     <div class="destination__data">
