--- a/src/components/Destination.astro
+++ b/src/components/Destination.astro
@@ -1,9 +1,9 @@
 ---
-import type { ImageMetadata } from 'astro';
-import { Picture } from 'astro:assets';
-import HeaderDestination from './HeaderDestination.astro';
-import { destinations } from '../data.json';
-// import moon from '../assets/destination/image-moon.png';
+import type { ImageMetadata } from "astro";
+import { Picture } from "astro:assets";
+import HeaderDestination from "./HeaderDestination.astro";
+import { destinations } from "../data.json";
+import moon from "../assets/destination/image-moon.png";
 
 const { destinationName } = Astro.props;
 const [destination] = destinations.filter(
@@ -12,7 +12,7 @@ const [destination] = destinations.filter(
 console.log(destination);
 
 const images = import.meta.glob<{ default: ImageMetadata }>(
-  '../assets/destination/*.{png,webp}'
+  "../assets/destination/*.{png,webp}"
 );
 console.log(images);
 ---
@@ -29,6 +29,7 @@ console.log(images);
     opacity: 0.25;
   }
 
+  /* TODO: check padding */
   .destination__image-container {
     padding: 3rem 0 2.5rem;
   }
@@ -40,8 +41,47 @@ console.log(images);
     object-fit: cover;
   }
 
-  .destination__data {
+  .destination__content {
     padding: 0 2.4rem;
+  }
+
+  .destintation__introduction {
+    /* Check padding */
+    padding: 2rem 0;
+  }
+
+  .destination__destintation,
+  .destination__text {
+    text-align: center;
+  }
+
+  .metrics {
+    /* Check padding */
+    padding: 2rem 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 2rem;
+  }
+
+  .metrics__container {
+    display: flex;
+    flex-direction: column;
+    gap: 0.5rem;
+  }
+
+  .metrics__heading,
+  .metrics__metric {
+    text-align: center;
+  }
+
+  .metrics__metric {
+    /* Check style */
+    font-size: 2.4rem;
+    font-family: var(--bellafair-font);
+    text-transform: uppercase;
+    font-weight: 400;
+    color: var(--white);
   }
 </style>
 
@@ -53,30 +93,34 @@ console.log(images);
   <!-- TODO: images .png .webp in .destination__image -->
   <div class="destination__info">
     <div class="destination__image-container">
-      <!-- <img src={moon.src} alt={destination.name} /> -->
-      <Picture
+      <img class="destination__image" src={moon.src} alt={destination.name} />
+      <!-- <Picture
         src={images[destination.images.png]()}
         formats={['webp', 'png']}
         alt={destination.name}
         class="destination__image"
-      />
+      /> -->
     </div>
 
-    <div class="destination__data">
+    <div class="destination__content">
       <HeaderDestination />
 
-      <p class="destination__text">{destination.description}</p>
+      <!-- Has own padding -->
+      <div class="destintation__introduction">
+        <h2 class="destination__destintation">{destination.name}</h2>
+        <p class="destination__text">{destination.description}</p>
+      </div>
 
-      <!-- Rename same class numbers -->
-      <div class="destination__metrics">
-        <div class="destination__distance">
-          <h4 class="destination__distance-heading">Avg. distance</h4>
-          <p class="destination__distance-number">{destination.distance}</p>
+      <!-- Has own padding -->
+      <div class="metrics">
+        <div class="metrics__container">
+          <h5 class="metrics__heading">Avg. distance</h5>
+          <p class="metrics__metric">{destination.distance}</p>
         </div>
 
-        <div class="destination__travel">
-          <h4 class="destination__travel-heading">Est. travel time</h4>
-          <p class="destination__travel-number">{destination.travel}</p>
+        <div class="metrics__container">
+          <h5 class="metrics__heading">Est. travel time</h5>
+          <p class="metrics__metric">{destination.travel}</p>
         </div>
       </div>
     </div>
