--- a/src/pages/destination/titan.astro
+++ b/src/pages/destination/titan.astro
@@ -3,6 +3,6 @@ import BaseDestination from "../../layout/BaseDestination.astro";
 
 ---
 
-<BaseDestination destinationName="Mars">
+<BaseDestination destinationName="Titan">
 
 </BaseDestination>
