--- a/src/components/HeaderDestination.astro
+++ b/src/components/HeaderDestination.astro
@@ -1,27 +1,38 @@
 ---
-const destinationLinks = ['moon', 'mars', 'europa', 'titan'];
+const destinationLinks = ["moon", "mars", "europa", "titan"];
 ---
 
 <style>
-    .destination__links{
-        display: flex;
-        justify-content: center;
-        gap: 2rem;
-        padding: 0;
-        list-style: none;
-    }
+  .destination__links {
+    display: flex;
+    justify-content: center;
+    gap: 2rem;
+    padding: 0;
+    list-style: none;
+  }
 
-    /* TODO: check styles and border bottom*/
-    .destination__link{
-        color: var(--white);
-        padding: 1rem;
-    }
+  /* TODO: check styles and border bottom*/
+  .destination__link {
+    color: var(--white);
+    padding: 1rem;
+  }
 </style>
 
 <div class="destination-nav-containter">
-    <nav class="destination__nav">
-        <ul class="destination__links">
-            {destinationLinks.map(link => <li class="destination-link-item"><a href="/" class="destination__link nav-text">{link}</a></li>)}
-        </ul>
-    </nav>
+  <nav class="destination__nav">
+    <ul class="destination__links">
+      {
+        destinationLinks.map((link) => (
+          <li class="destination-link-item">
+            <a
+              href={`./${link === "moon" ? "" : link}`}
+              class="destination__link nav-text"
+            >
+              {link}
+            </a>
+          </li>
+        ))
+      }
+    </ul>
+  </nav>
 </div>
