--- a/src/components/Destination.astro
+++ b/src/components/Destination.astro
@@ -1,6 +1,6 @@
 ---
 import type { ImageMetadata } from "astro";
-import { Picture } from "astro:assets";
+import { Picture }  from "astro:assets";
 import HeaderDestination from "./HeaderDestination.astro";
 import { destinations } from "../data.json";
 import moon from "../assets/destination/image-moon.png";
@@ -9,12 +9,12 @@ const { destinationName } = Astro.props;
 const [destination] = destinations.filter(
   (destination) => destination.name === destinationName
 );
-console.log(destination);
+// console.log(destination);
 
 const images = import.meta.glob<{ default: ImageMetadata }>(
   "../assets/destination/*.{png,webp}"
 );
-console.log(images);
+// console.log(images);
 ---
 
 <style>
