--- a/src/components/Destination.astro
+++ b/src/components/Destination.astro
@@ -1,9 +1,9 @@
 ---
-import type { ImageMetadata } from "astro";
-import { Picture }  from "astro:assets";
-import HeaderDestination from "./HeaderDestination.astro";
-import { destinations } from "../data.json";
-import moon from "../assets/destination/image-moon.png";
+import type { ImageMetadata } from 'astro';
+import { Picture } from 'astro:assets';
+import HeaderDestination from './HeaderDestination.astro';
+import { destinations } from '../data.json';
+// import moon from "../assets/destination/image-moon.png";
 
 const { destinationName } = Astro.props;
 const [destination] = destinations.filter(
@@ -12,7 +12,7 @@ const [destination] = destinations.filter(
 // console.log(destination);
 
 const images = import.meta.glob<{ default: ImageMetadata }>(
-  "../assets/destination/*.{png,webp}"
+  '../assets/destination/*.{png,webp}'
 );
 // console.log(images);
 ---
@@ -31,7 +31,7 @@ const images = import.meta.glob<{ default: ImageMetadata }>(
 
   /* TODO: check padding */
   .destination__image-container {
-    padding: 3rem 0 2.5rem;
+    padding: 3rem 0 1.5rem;
   }
 
   .destination__image {
@@ -55,19 +55,26 @@ const images = import.meta.glob<{ default: ImageMetadata }>(
     text-align: center;
   }
 
+  .destination__text {
+    line-height: 2.5rem;
+    font-size: 1.6rem;
+    text-wrap: pretty;
+    padding: 0 3rem;
+  }
+
   .metrics {
-    /* Check padding */
+    border-top: solid 0.1rem #383b4b;
     padding: 2rem 0;
     display: flex;
     flex-direction: column;
     align-items: center;
-    gap: 2rem;
+    gap: 3rem;
   }
 
   .metrics__container {
     display: flex;
     flex-direction: column;
-    gap: 0.5rem;
+    gap: 1rem;
   }
 
   .metrics__heading,
@@ -75,12 +82,8 @@ const images = import.meta.glob<{ default: ImageMetadata }>(
     text-align: center;
   }
 
+  /* Check style */
   .metrics__metric {
-    /* Check style */
-    font-size: 2.4rem;
-    font-family: var(--bellafair-font);
-    text-transform: uppercase;
-    font-weight: 400;
     color: var(--white);
   }
 </style>
@@ -93,13 +96,13 @@ const images = import.meta.glob<{ default: ImageMetadata }>(
   <!-- TODO: images .png .webp in .destination__image -->
   <div class="destination__info">
     <div class="destination__image-container">
-      <img class="destination__image" src={moon.src} alt={destination.name} />
-      <!-- <Picture
+      <!-- <img class="destination__image" src={moon.src} alt={destination.name} /> -->
+      <Picture
         src={images[destination.images.png]()}
         formats={['webp', 'png']}
         alt={destination.name}
         class="destination__image"
-      /> -->
+      />
     </div>
 
     <div class="destination__content">
@@ -114,13 +117,13 @@ const images = import.meta.glob<{ default: ImageMetadata }>(
       <!-- Has own padding -->
       <div class="metrics">
         <div class="metrics__container">
-          <h5 class="metrics__heading">Avg. distance</h5>
-          <p class="metrics__metric">{destination.distance}</p>
+          <h5 class="metrics__heading subheading-2">Avg. distance</h5>
+          <p class="metrics__metric subheading-1">{destination.distance}</p>
         </div>
 
         <div class="metrics__container">
-          <h5 class="metrics__heading">Est. travel time</h5>
-          <p class="metrics__metric">{destination.travel}</p>
+          <h5 class="metrics__heading subheading-2">Est. travel time</h5>
+          <p class="metrics__metric subheading-1">{destination.travel}</p>
         </div>
       </div>
     </div>
