--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -52,19 +52,19 @@ import hamburgerMenu from '../assets/shared/icon-hamburger.svg';
 <header class="header">
   <div class="header__home">
     <a href="/" class="header__link" aria-label="Go main page">
-      <!-- <Image src={logo} alt="Logo Space Tourism" class="header__logo" /> -->
-      <img src={logo.src} alt="Logo Space Tourism" />
+      <Image src={logo} alt="Logo Space Tourism" class="header__logo" />
+      <!-- <img src={logo.src} alt="Logo Space Tourism" /> -->
     </a>
   </div>
 
   <div class="header__menu">
-    <button class="header__btn">
-      <img
+    <button class="header__btn" aria-label="Display menu">
+      <!-- <img
         src={hamburgerMenu.src}
         alt="Menu"
-        aria-label="Display menu"
         class="header__hamburger"
-      />
+      /> -->
+      <Image src={hamburgerMenu} alt="Menu" class="header__hamburger" />
     </button>
   </div>
 
