--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -1,5 +1,5 @@
 ---
-import { Image }  from 'astro:assets';
+import { Image } from 'astro:assets';
 import closeBtn from '../assets/shared/icon-close.svg';
 const linkPages = ['home', 'destination', 'crew', 'technology'];
 ---
@@ -89,18 +89,18 @@ const linkPages = ['home', 'destination', 'crew', 'technology'];
   <ul class="navbar__links">
     <div class="navbar__btn-container">
       <button class="navbar__btn">
-        <!-- <Image
+        <Image
           src={closeBtn}
           alt="Close Menu"
           aria-label="Close menu"
           class="navbar__close"
-        /> -->
-        <img
+        />
+        <!-- <img
           src={closeBtn.src}
           alt="Close Menu"
           aria-label="Close menu"
           class="navbar__close"
-        />
+        /> -->
       </button>
     </div>
 
