--- a/src/components/Crew.astro
+++ b/src/components/Crew.astro
@@ -1,19 +1,59 @@
 ---
-import type { ImageMetadata }  from 'astro';
+import type { ImageMetadata } from 'astro';
 import CrewButtons from './CrewButtons.astro';
-import { Picture }  from 'astro:assets';
-import {crew}  from '../data.json';
+import { Picture } from 'astro:assets';
+import { crew } from '../data.json';
 import douglas from '../assets/crew/image-douglas-hurley.png';
-const {crewName } = Astro.props;
+const { crewName } = Astro.props;
 const [member] = crew.filter((member) => member.name === crewName);
 console.log(member);
 
 const images = import.meta.glob<{ default: ImageMetadata }>(
-  "../assets/crew/*.{png,webp}"
+  '../assets/crew/*.{png,webp}'
 );
 console.log(images);
-
 ---
+
+<style>
+  .crew__heading {
+    text-align: center;
+    color: var(--white);
+  }
+
+  .crew__heading-span {
+    opacity: 25%;
+  }
+
+  .crew__content {
+    padding: 3rem 2.4rem;
+  }
+
+  .crew__personal {
+    border-bottom: solid 0.1rem #383b4b;
+  }
+  .crew__member {
+    height: 22.3rem;
+    object-fit: contain;
+  }
+
+  .crew__role {
+    text-align: center;
+    color: var(--white);
+    opacity: 50%;
+  }
+
+  .crew__name {
+    text-align: center;
+    padding: 1rem 0;
+  }
+
+  .crew__bio {
+    text-align: center;
+    font-size: 1.6rem;
+    padding: 0 3rem;
+    line-height: 2.5rem;
+  }
+</style>
 
 <section class="crew">
   <h5 class="crew__heading">
@@ -22,17 +62,23 @@ console.log(images);
 
   <div class="crew__content">
     <div class="crew__personal">
-        <img src={douglas.src} alt="Douglas">
+      <!-- <img src={douglas.src} alt="Douglas"> -->
+      <Picture
+        src={images[member.images.png]()}
+        formats={['webp', 'png']}
+        alt={member.name}
+        class="crew__member"
+      />
     </div>
 
     <div class="crew__info">
-        <CrewButtons/>
+      <CrewButtons />
 
-        <div class="crew__about">
-          <h3 class="crew__role">{member.role}</h3>
-          <h2 class="crew__name">{member.name}</h2>
-          <p class="crew__bio">{member.bio}</p>
-        </div>
+      <div class="crew__about">
+        <h5 class="crew__role">{member.role}</h5>
+        <h3 class="crew__name">{member.name}</h3>
+        <p class="crew__bio">{member.bio}</p>
+      </div>
     </div>
   </div>
 </section>
