--- a/src/components/Technology.astro
+++ b/src/components/Technology.astro
@@ -1,13 +1,48 @@
 ---
+import type { ImageMetadata } from "astro";
+import { Image } from "astro:assets";
 import TechnologyNav from "./TechnologyNav.astro";
-import {technology}  from '../data.json';
+import { technology } from "../data.json";
+import imagePrueba from "../assets/technology/image-launch-vehicle-landscape.jpg";
 // console.log(technology);
-const {techName}  = Astro.props;
-const [tech] = technology.filter(tech => tech.name === techName);
+const { techName } = Astro.props;
+const [tech] = technology.filter((tech) => tech.name === techName);
 console.log(tech);
-
-
+const images = import.meta.glob<{ default: ImageMetadata }>(
+  "../assets/technology/*.{jpg}"
+);
 ---
+
+<style>
+  .tech__heading {
+    display: flex;
+    justify-content: center;
+    gap: 1.5rem;
+    color: var(--white);
+  }
+
+  .tech__heading--opacity {
+    opacity: 0.25;
+  }
+
+  .tech__media{
+    width: 100%;
+  }
+
+  .tech__image {
+    /* TODO: CHECK */
+    object-fit: cover;
+  }
+
+  .tech__terminology,
+  .tech__name {
+    text-align: center;
+  }
+
+  .tech__description{
+  
+  }
+</style>
 
 <section class="tech">
   <h5 class="tech__heading">
@@ -16,19 +51,23 @@ console.log(tech);
 
   <div class="tech__content">
     <div class="tech__media">
-        <img src="../assets/technology/image-launch-vehicle-landscape.jpg" alt="launch vehicle" class="tech__image">
+      <img src={imagePrueba.src} alt="launch vehicle" class="tech__image" />
+      <!-- <Image
+        src={images[tech.images.landscape]()}
+        alt={tech.name}
+        widths={[515, 768]}
+        sizes={`(max-width: 767px) 515px, (min-width: 768px) 768px`}
+      /> -->
     </div>
 
     <div class="tech__info">
-        <TechnologyNav/>
+      <TechnologyNav />
 
-        <div class="tech__specs">
-            <h5 class="tech__terminology">The terminology</h5>
-            <h2 class="tech__name">{tech.name}</h2>
-            <div class="tech__description">{tech.description}</div>
-        </div>
+      <div class="tech__specs">
+        <h5 class="tech__terminology">The terminology</h5>
+        <h2 class="tech__name">{tech.name}</h2>
+        <p class="tech__description">{tech.description}</p>
+      </div>
     </div>
   </div>
 </section>
-
-
