--- a/src/components/TechnologyNav.astro
+++ b/src/components/TechnologyNav.astro
@@ -2,6 +2,29 @@
 const pages = ["launch", "capsule", "spaceport"];
 ---
 
+<style>
+  .tech__links {
+    display: flex;
+    justify-content: center;
+    gap: 2rem;
+    list-style: none;
+    padding: 0;
+  }
+
+  .tech__link {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 2rem;
+    font-size: 1.6rem;
+    border: solid 0.1rem var(--white);
+    border-radius: 50%;
+    width: 2rem;
+    height: 2rem;
+    color: var(--white);
+  }
+</style>
+
 <div class="tech__navbar">
   <nav class="tech__nav">
     <ul class="tech__links">
@@ -13,7 +36,7 @@ const pages = ["launch", "capsule", "spaceport"];
               class="tech__link"
               aria-label={`Redirect to ${link}`}
             >
-            {index}
+              {index}
             </a>
           </li>
         ))
