--- a/src/components/TechnologyNav.astro
+++ b/src/components/TechnologyNav.astro
@@ -1,12 +1,12 @@
 ---
-const pages = ["launch", "capsule", "spaceport"];
+const pages = ['launch', 'capsule', 'spaceport'];
 ---
 
 <style>
   .tech__links {
     display: flex;
     justify-content: center;
-    gap: 2rem;
+    gap: 1.5rem;
     list-style: none;
     padding: 0;
   }
@@ -15,12 +15,12 @@ const pages = ["launch", "capsule", "spaceport"];
     display: flex;
     align-items: center;
     justify-content: center;
-    padding: 2rem;
     font-size: 1.6rem;
     border: solid 0.1rem var(--white);
+    line-height: 1;
     border-radius: 50%;
-    width: 2rem;
-    height: 2rem;
+    width: 4rem;
+    height: 4rem;
     color: var(--white);
   }
 </style>
