--- a/src/components/Crew.astro
+++ b/src/components/Crew.astro
@@ -63,13 +63,13 @@ console.log(images);
 
   <div class="crew__content">
     <div class="crew__personal">
-      <img src={douglas.src} alt="Douglas"   class="crew__member">
-      <!-- <Picture
+      <!-- <img src={douglas.src} alt="Douglas"   class="crew__member"> -->
+      <Picture
         src={images[member.images.png]()}
         formats={['webp', 'png']}
         alt={member.name}
         class="crew__member"
-      /> -->
+      />
     </div>
 
     <div class="crew__info">
