--- a/src/components/Destination.astro
+++ b/src/components/Destination.astro
@@ -1,9 +1,9 @@
 ---
 import type { ImageMetadata } from 'astro';
-import { Picture }  from 'astro:assets';
+import { Picture } from 'astro:assets';
 import HeaderDestination from './HeaderDestination.astro';
 import { destinations } from '../data.json';
-import moon from "../assets/destination/image-moon.png";
+import moon from '../assets/destination/image-moon.png';
 
 const { destinationName } = Astro.props;
 const [destination] = destinations.filter(
@@ -96,13 +96,13 @@ const images = import.meta.glob<{ default: ImageMetadata }>(
   <!-- TODO: images .png .webp in .destination__image -->
   <div class="destination__info">
     <div class="destination__image-container">
-      <img class="destination__image" src={moon.src} alt={destination.name} />
-      <!-- <Picture
+      <!-- <img class="destination__image" src={moon.src} alt={destination.name} /> -->
+      <Picture
         src={images[destination.images.png]()}
         formats={['webp', 'png']}
         alt={destination.name}
         class="destination__image"
-      /> -->
+      />
     </div>
 
     <div class="destination__content">
