--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,7 +1,8 @@
 ---
-import Base from "../layout/Base.astro";
-import Main from "../components/Main.astro";
+import Base from '../layout/Base.astro';
+import Main from '../components/Main.astro';
 ---
-<Base>
-	<Main/>
+
+<Base activePage="home">
+  <Main />
 </Base>
