--- a/src/layout/BaseCrew.astro
+++ b/src/layout/BaseCrew.astro
@@ -1,18 +1,18 @@
 ---
-import Base from "./Base.astro";
-import Crew from "../components/Crew.astro";
+import Base from './Base.astro';
+import Crew from '../components/Crew.astro';
 
-const {crewName} = Astro.props;
+const { crewName } = Astro.props;
 ---
 
 <style>
-    body{
-        background-image: url(../assets/crew/background-crew-mobile.jpg);
-        background-repeat: no-repeat;
-        background-size: cover;
-    }
+  body {
+    background-image: url(../assets/crew/background-crew-mobile.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+  }
 </style>
 
-<Base>
-    <Crew crewName={crewName}/>
+<Base activePage="crew">
+  <Crew crewName={crewName} />
 </Base>
