--- a/src/layout/BaseDestination.astro
+++ b/src/layout/BaseDestination.astro
@@ -13,6 +13,6 @@ const { destinationName } = Astro.props;
   }
 </style>
 
-<Base>
+<Base activePage="destination">
   <Destination destinationName={destinationName} />
 </Base>
