--- a/src/layout/BaseTechnology.astro
+++ b/src/layout/BaseTechnology.astro
@@ -1,17 +1,17 @@
 ---
-import Base from "./Base.astro";
-import Technology from "../components/Technology.astro";
-const {techName} = Astro.props;
+import Base from './Base.astro';
+import Technology from '../components/Technology.astro';
+const { techName } = Astro.props;
 ---
 
 <style>
-    body{
-        background-image: url(../assets/technology/background-technology-mobile.jpg);
-        background-repeat: no-repeat;
-        background-size: cover;
-   }
+  body {
+    background-image: url(../assets/technology/background-technology-mobile.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+  }
 </style>
 
-<Base>
-    <Technology techName={techName}/>
+<Base activePage="technology">
+  <Technology techName={techName} />
 </Base>
