--- a/src/pages/destination/titan.astro
+++ b/src/pages/destination/titan.astro
@@ -1,8 +1,5 @@
 ---
-import BaseDestination from "../../layout/BaseDestination.astro";
-
+import BaseDestination from '../../layout/BaseDestination.astro';
 ---
 
-<BaseDestination destinationName="Titan">
-
-</BaseDestination>
+<BaseDestination destinationName="Titan" destinationLink="titan" />
