--- a/src/components/Destination.astro
+++ b/src/components/Destination.astro
@@ -3,18 +3,15 @@ import type { ImageMetadata } from 'astro';
 import { Picture } from 'astro:assets';
 import HeaderDestination from './HeaderDestination.astro';
 import { destinations } from '../data.json';
-import moon from '../assets/destination/image-moon.png';
 
-const { destinationName } = Astro.props;
+const { destinationName, destinationLink } = Astro.props;
 const [destination] = destinations.filter(
   (destination) => destination.name === destinationName
 );
-// console.log(destination);
 
 const images = import.meta.glob<{ default: ImageMetadata }>(
   '../assets/destination/*.{png,webp}'
 );
-// console.log(images);
 ---
 
 <style>
@@ -106,7 +103,7 @@ const images = import.meta.glob<{ default: ImageMetadata }>(
     </div>
 
     <div class="destination__content">
-      <HeaderDestination />
+      <HeaderDestination destinationLink={destinationLink} />
 
       <!-- Has own padding -->
       <div class="destintation__introduction">
