--- a/src/pages/destination/mars.astro
+++ b/src/pages/destination/mars.astro
@@ -1,8 +1,5 @@
 ---
-import BaseDestination from "../../layout/BaseDestination.astro";
-
+import BaseDestination from '../../layout/BaseDestination.astro';
 ---
 
-<BaseDestination destinationName="Mars">
-
-</BaseDestination>
+<BaseDestination destinationName="Mars" destinationLink="mars" />
