--- a/src/pages/crew/index.astro
+++ b/src/pages/crew/index.astro
@@ -1,5 +1,5 @@
 ---
-import BaseCrew from "../../layout/BaseCrew.astro";
+import BaseCrew from '../../layout/BaseCrew.astro';
 ---
-<BaseCrew crewName="Douglas Hurley">
-</BaseCrew>
+
+<BaseCrew crewName="Douglas Hurley" crewLink="douglas" />
