--- a/src/pages/crew/mark.astro
+++ b/src/pages/crew/mark.astro
@@ -1,5 +1,5 @@
 ---
-import BaseCrew from "../../layout/BaseCrew.astro";
+import BaseCrew from '../../layout/BaseCrew.astro';
 ---
-<BaseCrew crewName="Mark Shuttleworth">
-</BaseCrew>
+
+<BaseCrew crewName="Mark Shuttleworth" crewLink="mark" />
