--- a/src/pages/crew/victor.astro
+++ b/src/pages/crew/victor.astro
@@ -1,5 +1,5 @@
 ---
-import BaseCrew from "../../layout/BaseCrew.astro";
+import BaseCrew from '../../layout/BaseCrew.astro';
 ---
-<BaseCrew crewName="Victor Glover">
-</BaseCrew>
+
+<BaseCrew crewName="Victor Glover" crewLink="victor" />
