--- a/src/components/Crew.astro
+++ b/src/components/Crew.astro
@@ -3,7 +3,7 @@ import type { ImageMetadata } from 'astro';
 import CrewButtons from './CrewButtons.astro';
 import { Picture } from 'astro:assets';
 import { crew } from '../data.json';
-const { crewName } = Astro.props;
+const { crewName, crewLink } = Astro.props;
 const [member] = crew.filter((member) => member.name === crewName);
 
 const images = import.meta.glob<{ default: ImageMetadata }>(
@@ -70,7 +70,7 @@ const images = import.meta.glob<{ default: ImageMetadata }>(
     </div>
 
     <div class="crew__info">
-      <CrewButtons />
+      <CrewButtons crewLink={crewLink} />
 
       <div class="crew__about">
         <h5 class="crew__role">{member.role}</h5>
