--- a/src/pages/crew/anousheh.astro
+++ b/src/pages/crew/anousheh.astro
@@ -1,5 +1,5 @@
 ---
-import BaseCrew from "../../layout/BaseCrew.astro";
+import BaseCrew from '../../layout/BaseCrew.astro';
 ---
-<BaseCrew crewName="Anousheh Ansari">
-</BaseCrew>
+
+<BaseCrew crewName="Anousheh Ansari" crewLink="anousheh" />
