--- a/src/pages/technology/capsule.astro
+++ b/src/pages/technology/capsule.astro
@@ -1,5 +1,5 @@
 ---
-import BaseTechnology from "../../layout/BaseTechnology.astro";
+import BaseTechnology from '../../layout/BaseTechnology.astro';
 ---
 
-<BaseTechnology techName="Space capsule"/>
+<BaseTechnology techName="Space capsule" techLink="capsule" />
