--- a/src/layout/BaseTechnology.astro
+++ b/src/layout/BaseTechnology.astro
@@ -1,7 +1,7 @@
 ---
 import Base from './Base.astro';
 import Technology from '../components/Technology.astro';
-const { techName } = Astro.props;
+const { techName, techLink } = Astro.props;
 ---
 
 <style>
@@ -13,5 +13,5 @@ const { techName } = Astro.props;
 </style>
 
 <Base activePage="technology">
-  <Technology techName={techName} />
+  <Technology techName={techName} techLink={techLink} />
 </Base>
