--- a/src/pages/technology/spaceport.astro
+++ b/src/pages/technology/spaceport.astro
@@ -1,5 +1,5 @@
 ---
-import BaseTechnology from "../../layout/BaseTechnology.astro";
+import BaseTechnology from '../../layout/BaseTechnology.astro';
 ---
 
-<BaseTechnology techName="Spaceport"/>
+<BaseTechnology techName="Spaceport" techLink="spaceport" />
