--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -20,6 +20,12 @@ const { activePage } = Astro.props;
     align-items: center;
   }
 
+  @media (min-width: 768px) {
+    .header__home {
+      padding: 1.4rem 2.9rem;
+    }
+  }
+
   .header__link {
     padding: 1rem;
   }
@@ -27,6 +33,13 @@ const { activePage } = Astro.props;
   .header__logo {
     width: 4rem;
     height: 4rem;
+  }
+
+  @media (min-width: 768px) {
+    .header__logo {
+      width: 4.8rem;
+      height: 4.8rem;
+    }
   }
 
   .header__btn {
@@ -39,6 +52,12 @@ const { activePage } = Astro.props;
     width: 2.4rem;
     height: 2.1rem;
     object-fit: cover;
+  }
+
+  @media (min-width: 768px) {
+    .header__menu {
+      display: none;
+    }
   }
 </style>
 
