--- a/src/components/Main.astro
+++ b/src/components/Main.astro
@@ -9,6 +9,12 @@
     background-size: cover;
   }
 
+  @media (min-width: 768px) {
+    body {
+      background-image: url('../assets/home/background-home-tablet.jpg');
+    }
+  }
+
   .space {
     display: flex;
     flex-direction: column;
@@ -19,10 +25,23 @@
     padding: 2.5rem 2.4rem;
   }
 
+  @media (min-width: 768px) {
+    .space__content {
+      padding: 10rem;
+    }
+  }
+
   .space__title,
   .space__heading,
   .space__text {
     text-align: center;
+  }
+
+  @media (min-width: 768px) {
+    .space__heading {
+      font-size: 2rem;
+      letter-spacing: 0.338rem;
+    }
   }
 
   .space__title {
@@ -31,8 +50,23 @@
     padding: 1.5rem 0;
   }
 
+  @media (min-width: 768px) {
+    .space__title {
+      line-height: 15rem;
+      font-size: 15rem;
+      padding: 2.5rem;
+    }
+  }
+
   .space__text {
     line-height: 2.5rem;
+  }
+
+  @media (min-width: 768px) {
+    .space__text {
+      line-height: 2.8rem;
+      padding: 0 8rem;
+    }
   }
 
   .space__explore {
@@ -53,6 +87,15 @@
     border-radius: 50%;
     color: var(--dark-blue);
     background-color: var(--white);
+  }
+
+  @media (min-width: 768px) {
+    .space__link {
+      width: 24.2rem;
+      height: 24.2rem;
+      font-size: 3.2rem;
+      letter-spacing: 0.2rem;
+    }
   }
 </style>
 
