--- a/src/components/Destination.astro
+++ b/src/components/Destination.astro
@@ -22,8 +22,23 @@ const images = import.meta.glob<{ default: ImageMetadata }>(
     color: var(--white);
   }
 
+  @media (min-width: 768px) {
+    .destination__heading {
+      justify-content: flex-start;
+      font-size: 2rem;
+      letter-spacing: 0.338rem;
+      padding: 4rem 3.9rem 0;
+    }
+  }
+
   .destination-span {
     opacity: 0.25;
+  }
+
+  @media (min-width: 768px) {
+    .destination-span {
+      font-weight: bold;
+    }
   }
 
   /* TODO: check padding */
@@ -31,11 +46,24 @@ const images = import.meta.glob<{ default: ImageMetadata }>(
     padding: 3rem 0 1.5rem;
   }
 
+  @media (min-width: 768px) {
+    .destination__image-container {
+      padding: 6rem 0 5rem;
+    }
+  }
+
   .destination__image {
     margin: 0 auto;
     width: 17rem;
     height: 17rem;
     object-fit: cover;
+  }
+
+  @media (min-width: 768px) {
+    .destination__image {
+      width: 30rem;
+      height: 30rem;
+    }
   }
 
   .destination__content {
