--- a/src/components/CrewButtons.astro
+++ b/src/components/CrewButtons.astro
@@ -8,6 +8,12 @@ const { crewLink } = Astro.props;
     padding: 3rem 0;
   }
 
+  @media (min-width: 768px) {
+    .crew__nav {
+      padding: 2rem 0 4rem;
+    }
+  }
+
   .crew__links {
     list-style: none;
     display: flex;
